complite users cards

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="p-4">
   <div class="container">
-    <h1 class="text-center mb-4">Notes App</h1>
+    <h1 class="text-center mb-4">Users App</h1>
     <div class="notes">
       <div class="row g-4"></div>
     </div>
@@ -27,12 +27,12 @@
         </div>
         <div class="modal-body">
           <div class="mb-3">
-            <label for="titleControl" class="form-label">Title</label>
-            <input type="text" class="form-control" id="titleControl" placeholder="Enter title" />
+            <label for="titleControl" class="form-label">Name</label>
+            <input type="text" class="form-control" id="titleControl" placeholder="Enter name" />
           </div>
           <div class="mb-3 ">
-            <label for="textControl" class="form-label">Description</label>
-            <textarea class="form-control " id="textControl" rows="3" placeholder="Enter text"></textarea>
+            <label for="textControl" class="form-label">Email</label>
+            <textarea class="form-control " id="textControl" rows="3" placeholder="Enter email"></textarea>
           </div>
         </div>
         <div class="modal-footer">
